--- a/components/UserGardenDashboardProfile.module.scss
+++ b/components/UserGardenDashboardProfile.module.scss
@@ -3,6 +3,12 @@
   max-width: 768px;
 }
 
+.image {
+  width: 100%;
+  display: block;
+  margin-bottom: 24px;
+}
+
 .section {
   padding: 0 0 24px 0;
 }
