--- a/components/UserGardenUpgrade.module.scss
+++ b/components/UserGardenUpgrade.module.scss
@@ -3,6 +3,12 @@
   padding: 35px 24px 24px 24px;
 }
 
+.image {
+  width: 100%;
+  display: block;
+  margin-bottom: 24px;
+}
+
 .top {
   padding: 128px 24px 48px 24px;
   margin: 0 auto 0 auto;
