--- a/components/UserGardenAccess.module.scss
+++ b/components/UserGardenAccess.module.scss
@@ -1,5 +1,5 @@
 .root {
-  padding: 35px 24px 24px 24px;
+  padding: 35px 24px 128px 24px;
   max-width: 768px;
 }
 
@@ -39,12 +39,24 @@
   min-width: 10%;
   width: 100%;
   padding: 24px 0px 24px 0px;
+  font-family: var(--font-family);
 }
 
 .list {
   padding-left: 12px;
   margin-top: 12px;
-  line-height: 1.225;
+  font-size: var(--type-scale-6);
+  line-height: 1.5;
+  font-weight: 400;
+  display: block;
+  text-decoration: none;
+  color: var(--theme-text);
+  font-family: var(--font-family);
+  letter-spacing: 0;
+
+  &:visited {
+    color: var(--theme-text);
+  }
 }
 
 .actions {
