--- a/system/documents/CheckmarkItem.module.scss
+++ b/system/documents/CheckmarkItem.module.scss
@@ -1,4 +1,5 @@
 .item {
+  font-family: var(--font-family);
   border-top: 1px solid var(--theme-border);
   display: flex;
   align-items: flex-start;
