--- a/system/typography/Typography.module.scss
+++ b/system/typography/Typography.module.scss
@@ -5,18 +5,21 @@
 }
 
 .h2 {
+  font-family: var(--font-family);
   font-size: var(--type-scale-2);
   line-height: 1.15;
-  font-weight: 400;
+  font-weight: 500;
 }
 
 .h3 {
+  font-family: var(--font-family);
   font-size: var(--type-scale-3);
   line-height: 1.15;
-  font-weight: 400;
+  font-weight: 500;
 }
 
 .h4 {
+  font-family: var(--font-family);
   font-size: var(--type-scale-4);
   line-height: 1.15;
   font-weight: 400;
