Adds the capability to customize all of the e-mail templates, improves placeholders

--- a/system/TextArea.module.scss
+++ b/system/TextArea.module.scss
@@ -25,7 +25,7 @@
 
   &::placeholder {
     opacity: 1;
-    color: var(--theme-border);
+    color: var(--theme-primary);
   }
 
   &::-webkit-scrollbar {
