style remaster for users.garden

--- a/components/UserGardenAccess.module.scss
+++ b/components/UserGardenAccess.module.scss
@@ -10,7 +10,7 @@
 }
 
 .section {
-  padding: 0 0 24px 0;
+  padding: 0 56px 88px 0;
 }
 
 .child {
@@ -42,7 +42,7 @@
 }
 
 .list {
-  padding-left: 12px;
+  padding-left: 20px;
   margin-top: 12px;
   font-size: var(--type-scale-6);
   line-height: 1.5;
