--- a/components/UserGardenApplications.module.scss
+++ b/components/UserGardenApplications.module.scss
@@ -4,7 +4,7 @@
 }
 
 .section {
-  padding: 0 0 24px 0;
+  padding: 0 56px 88px 0;
 }
 
 .child {
@@ -36,7 +36,7 @@
 }
 
 .list {
-  padding-left: 12px;
+  padding-left: 20px;
   margin-top: 12px;
   font-size: var(--type-scale-6);
   line-height: 1.5;
@@ -51,7 +51,6 @@
     color: var(--theme-text);
   }
 }
-
 
 .actions {
   margin-top: 24px;
