--- a/components/UserGardenAuthenticatedNavigation.module.scss
+++ b/components/UserGardenAuthenticatedNavigation.module.scss
@@ -22,7 +22,7 @@
   text-decoration: none;
   text-transform: uppercase;
   padding: 0 24px 0 20px;
-  opacity: 0.7;
+  opacity: 0.65;
   user-select: none;
 
   &:visited {
@@ -45,6 +45,6 @@
 .right {
   min-width: 10%;
   width: 100%;
-  font-size: var(--type-scale-6);
+  font-size: var(--type-scale-fixed-medium);
   line-height: 1;
 }
