--- a/global.scss
+++ b/global.scss
@@ -362,6 +362,7 @@ body {
 
   --color-red-60: rgba(218, 30, 40, 1);
   --color-red-60-3: rgba(218, 30, 40, 0.3);
+  --color-red-60-9: rgba(218, 30, 40, 0.9);
 
   --color-green-60: rgba(25, 128, 56, 1);
   --color-green-60-3: rgba(25, 128, 56, 0.3);
