adds auth onboarding to users.garden

--- a/system/MonospacePreview.module.scss
+++ b/system/MonospacePreview.module.scss
@@ -1,8 +1,6 @@
 .root {
-  font-size: var(--type-scale-fixed-tiny);
   font-family: var(--font-family-mono);
   box-shadow: var(--theme-modal);
-  opacity: 0.4;
 }
 
 .active {
@@ -13,10 +11,10 @@
 }
 
 .title {
+  font-size: var(--type-scale-fixed-tiny);
   background: var(--theme-foreground);
-  padding: 2px 4px 2px 4px;
+  padding: 8px;
   color: var(--theme-text);
-  text-transform: uppercase;
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
@@ -32,8 +30,9 @@
 }
 
 .children {
-  background: var(--theme-foreground-secondary);
-  padding: 2px 4px 2px 4px;
+  font-size: var(--type-scale-fixed-medium);
+  background: var(--color-gray-10);
+  padding: 8px;
   color: var(--theme-text);
   overflow-wrap: break-word;
   white-space: pre-wrap;
