--- a/system/TextArea.module.scss
+++ b/system/TextArea.module.scss
@@ -7,7 +7,7 @@
   width: 100%;
   line-height: 1.6;
   font-size: var(--type-scale-fixed-small);
-  font-family: var(--font-family-mono);
+  font-family: var(--font-family);
   box-sizing: border-box;
   white-space: pre-wrap;
   resize: none;
