--- a/components/UserGardenAuthenticatedNavigation.module.scss
+++ b/components/UserGardenAuthenticatedNavigation.module.scss
@@ -22,7 +22,6 @@
   text-decoration: none;
   text-transform: uppercase;
   padding: 0 24px 0 20px;
-  opacity: 0.65;
   user-select: none;
 
   &:visited {
@@ -32,6 +31,10 @@
   &:hover {
     opacity: 1;
     color: var(--theme-primary);
+  }
+
+  @media (max-width: 768px) {
+    padding: 0 12px 0 10px;
   }
 }
 
@@ -47,4 +50,8 @@
   width: 100%;
   font-size: var(--type-scale-fixed-medium);
   line-height: 1;
+
+  @media (max-width: 768px) {
+    font-size: var(--type-scale-fixed-tiny);
+  }
 }
