--- a/system/typography/Typography.module.scss
+++ b/system/typography/Typography.module.scss
@@ -44,7 +44,7 @@
 }
 
 .p {
-  font-size: var(--type-scale-5);
+  font-size: var(--type-scale-7);
   line-height: 1.444;
   font-weight: 400;
   display: block;
@@ -63,7 +63,12 @@
   font-size: var(--type-scale-fixed-tiny);
   line-height: var(--type-scale-fixed-tiny);
   font-weight: 400;
+  padding: 8px 24px 8px 24px;
   opacity: 0.4;
+
+  @media (max-width: 768px) {
+    padding: 8px 12px 8px 12px;
+  }
 }
 
 .text {
@@ -80,7 +85,7 @@
 }
 
 .subTitle {
-  font-size: var(--type-scale-5);
+  font-size: var(--type-scale-7);
   font-family: var(--font-family);
   font-weight: 600;
 }
