--- a/components/UserGardenAuthenticatedNavigation.module.scss
+++ b/components/UserGardenAuthenticatedNavigation.module.scss
@@ -23,6 +23,7 @@
   text-transform: uppercase;
   padding: 0 24px 0 20px;
   user-select: none;
+  opacity: 0.7;
 
   &:visited {
     color: var(--theme-text);
