--- a/system/typography/Typography.module.scss
+++ b/system/typography/Typography.module.scss
@@ -67,6 +67,8 @@
   opacity: 0.4;
 
   @media (max-width: 768px) {
+    font-size: var(--type-scale-fixed-label);
+    line-height: var(--type-scale-fixed-label);
     padding: 8px 12px 8px 12px;
   }
 }
