hotfix: nav reodering

--- a/scenes/UserGardenDashboard.module.scss
+++ b/scenes/UserGardenDashboard.module.scss
@@ -11,7 +11,7 @@
 }
 
 .nav {
-  background: var(--theme-primary);
+  background: rgba(204, 204, 204, 1);
   color: var(--theme-background);
   display: grid;
   grid-template-columns: 1fr;
