fixes animation reloading

--- a/global.scss
+++ b/global.scss
@@ -130,23 +130,6 @@ body.theme-light {
   --theme-box-shadow-modal: inset 0 0 0 1px var(--theme-border), 0 0 1px 4px rgba(0, 0, 0, 0.02);
   --theme-box-shadow-button: 0 1px 2px rgba(0, 0, 0, 0.15);
   --theme-box-shadow-button-hover: 0 5px 15px rgba(0, 0, 0, 0.3);
-
-  &::-webkit-scrollbar {
-    width: 8px;
-    height: 8px;
-  }
-  &::-webkit-scrollbar {
-    background: transparent;
-  }
-  &::-webkit-scrollbar-track {
-    background: var(--theme-foreground);
-  }
-  &::-webkit-scrollbar-thumb {
-    background: var(--theme-foreground-secondary);
-  }
-  &::-webkit-scrollbar-thumb:hover {
-    background: var(--theme-foreground-secondary);
-  }
 }
 
 body.theme-daybreak {
@@ -174,23 +157,6 @@ body.theme-daybreak {
   --theme-box-shadow-modal: inset 0 0 0 1px var(--color-daybreak-90);
   --theme-box-shadow-button: 0 0 0 rgba(0, 0, 0, 0.15);
   --theme-box-shadow-button-hover: 0 0px 0px 4px rgba(255, 255, 255, 0.2);
-
-  &::-webkit-scrollbar {
-    width: 8px;
-    height: 8px;
-  }
-  &::-webkit-scrollbar {
-    background: transparent;
-  }
-  &::-webkit-scrollbar-track {
-    background: var(--theme-foreground);
-  }
-  &::-webkit-scrollbar-thumb {
-    background: var(--theme-foreground-secondary);
-  }
-  &::-webkit-scrollbar-thumb:hover {
-    background: var(--theme-foreground-secondary);
-  }
 }
 
 body.theme-dark {
@@ -218,23 +184,6 @@ body.theme-dark {
   --theme-box-shadow-modal: inset 0 0 0 1px var(--color-gray-90);
   --theme-box-shadow-button: 0 0 0 rgba(0, 0, 0, 0.15);
   --theme-box-shadow-button-hover: 0 0px 0px 4px rgba(255, 255, 255, 0.2);
-
-  &::-webkit-scrollbar {
-    width: 8px;
-    height: 8px;
-  }
-  &::-webkit-scrollbar {
-    background: transparent;
-  }
-  &::-webkit-scrollbar-track {
-    background: var(--theme-foreground);
-  }
-  &::-webkit-scrollbar-thumb {
-    background: var(--theme-foreground-secondary);
-  }
-  &::-webkit-scrollbar-thumb:hover {
-    background: var(--theme-foreground-secondary);
-  }
 }
 
 body.theme-blue {
@@ -262,23 +211,6 @@ body.theme-blue {
   --theme-box-shadow-modal: inset 0 0 0 1px var(--theme-border);
   --theme-box-shadow-button: 0 0 0 rgba(0, 0, 0, 0.15);
   --theme-box-shadow-button-hover: 0 0px 0px 4px rgba(255, 255, 255, 0.2);
-
-  &::-webkit-scrollbar {
-    width: 8px;
-    height: 8px;
-  }
-  &::-webkit-scrollbar {
-    background: transparent;
-  }
-  &::-webkit-scrollbar-track {
-    background: var(--theme-foreground);
-  }
-  &::-webkit-scrollbar-thumb {
-    background: var(--theme-foreground-secondary);
-  }
-  &::-webkit-scrollbar-thumb:hover {
-    background: var(--theme-foreground-secondary);
-  }
 }
 
 body.theme-neon-green {
@@ -307,21 +239,11 @@ body.theme-neon-green {
   --theme-box-shadow-button: 0 0 0 rgba(0, 0, 0, 0.15);
   --theme-box-shadow-button-hover: 0 0px 0px 4px rgba(255, 255, 255, 0.2);
 
-  &::-webkit-scrollbar {
-    width: 8px;
-    height: 8px;
-  }
-  &::-webkit-scrollbar {
-    background: transparent;
-  }
-  &::-webkit-scrollbar-track {
-    background: var(--theme-foreground);
-  }
-  &::-webkit-scrollbar-thumb {
-    background: var(--theme-foreground-secondary);
-  }
-  &::-webkit-scrollbar-thumb:hover {
-    background: var(--theme-foreground-secondary);
+  scrollbar-width: none;
+  -ms-overflow-style: -ms-autohiding-scrollbar;
+
+  ::-webkit-scrollbar {
+    display: none;
   }
 }
 
@@ -447,6 +369,13 @@ body {
   font-size: 16px;
   @media (max-width: 768px) {
     font-size: 12px;
+  }
+
+  scrollbar-width: none;
+  -ms-overflow-style: -ms-autohiding-scrollbar;
+
+  ::-webkit-scrollbar {
+    display: none;
   }
 
   --theme-border: var(--color-gray-20);
