--- a/system/Input.module.scss
+++ b/system/Input.module.scss
@@ -1,14 +1,14 @@
 .input {
   -webkit-appearance: none;
   color: var(--theme-text);
-  font-family: var(--font-family);
+  font-family: var(--font-family-mono);
   font-weight: 600;
   background: var(--theme-background-input);
   box-sizing: border-box;
   width: 100%;
   height: 48px;
   display: flex;
-  font-size: var(--type-scale-fixed-small);
+  font-size: var(--type-scale-fixed-medium);
   align-items: center;
   justify-content: flex-start;
   outline: 0;
