--- a/system/TextArea.module.scss
+++ b/system/TextArea.module.scss
@@ -6,8 +6,8 @@
   padding: 12px 16px 12px 16px;
   width: 100%;
   line-height: 1.6;
-  font-size: var(--type-scale-fixed-small);
-  font-family: var(--font-family);
+  font-size: var(--type-scale-fixed-medium);
+  font-family: var(--font-family-mono);
   box-sizing: border-box;
   white-space: pre-wrap;
   resize: none;
